--- a/swipelistview/build.gradle
+++ b/swipelistview/build.gradle
@@ -1,13 +1,17 @@
 apply plugin: 'android-library'
 
+repositories {
+   mavenCentral()
+}
+
 dependencies {
 	compile 'com.android.support:support-v4:18.0.+'
 	compile 'com.nineoldandroids:library:2.4.0+'
 }
 
 android {
-	compileSdkVersion 18
-	buildToolsVersion "18.0.1"
+	compileSdkVersion 19
+	buildToolsVersion "19.0.3"
 	
 	sourceSets {
 		main {
